--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
                     <p>
-                        La compagnie a passé les mois de Juillet et Août à Sévérac (Aveyron) avec La citée des dragons et les animations médiévales. Elle prépare désormais la rentrée de <a href="#spectateurs">Spectateur(s)</a>.
+                        La compagnie a présenté La cité des dragons et des animations médiévales à Sévérac (Aveyron) durant les mois de Juillet et Août. Elle prépare désormais la rentrée de <a href="#spectateurs">Spectateur(s)</a>.
                     </p>
                     <h2>Prochaines dates</h2>
                     <!-- liste dates -->
@@ -166,11 +166,11 @@
                                     <span class="pull-xs-right"><span class="date-jour">18</span>
                                     <br><span class="date-mois">OCT</span></span>
                                 </div>
-                                <div class="col-xs-12 col-md-7">
+                                <div class="col-xs-12 col-md-7 date-details">
                                     <p class="date">
                                         <span class="date-lieu">TOULOUSE</span> - <span class="date-piece"> <a href="#spectateurs">SPECTATEUR(S)</a>, un accident de théâtre</span>
                                         <br>
-                                        <span class="date-date">mardi 18 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond</span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">map</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
+                                        <span class="date-date">mardi 18 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond</span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-3">
@@ -201,7 +201,7 @@
                                     <p class="date">
                                         <span class="date-lieu">TOULOUSE</span> - <span class="date-piece"> <a href="#spectateurs">SPECTATEUR(S)</a>, un accident de théâtre</span>
                                         <br>
-                                        <span class="date-date">mercredi 19 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">map</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
+                                        <span class="date-date">mercredi 19 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-3">
@@ -232,7 +232,7 @@
                                     <p class="date">
                                         <span class="date-lieu">TOULOUSE</span> - <span class="date-piece"> <a href="#spectateurs">SPECTATEUR(S)</a>, un accident de théâtre</span>
                                         <br>
-                                        <span class="date-date">jeudi 20 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">map</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
+                                        <span class="date-date">jeudi 20 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-3">
@@ -263,7 +263,7 @@
                                     <p class="date">
                                         <span class="date-lieu">TOULOUSE</span> - <span class="date-piece"> <a href="#spectateurs">SPECTATEUR(S)</a>, un accident de théâtre</span>
                                         <br>
-                                        <span class="date-date">vendredi 21 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">map</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
+                                        <span class="date-date">vendredi 21 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-3">
@@ -294,7 +294,7 @@
                                     <p class="date">
                                         <span class="date-lieu">TOULOUSE</span> - <span class="date-piece"> <a href="#spectateurs">SPECTATEUR(S)</a>, un accident de théâtre</span>
                                         <br>
-                                        <span class="date-date">samedi 22 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">map</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
+                                        <span class="date-date">samedi 22 oct. à 21h00</span>, <span class="date-lieu">Théâtre du Grand Rond </span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-3">
@@ -327,7 +327,7 @@
                                     <p class="date">
                                         <span class="date-lieu">LONDON</span> - <span class="date-piece"> <a href="#spectateurs">SPECTATEUR(S)</a>, un accident de théâtre</span>
                                         <br>
-                                        <span class="date-date">jeudi 10 nov. à 8:30pm</span>, <span class="date-lieu">The Cockpit Theatre</span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/Fzw7ssbgBgP2">map</a> - <a class="reservation" href="http://tickets.thecockpit.org.uk/Sales/Shows/Voila-2016/SPECTATEURS-un-accident-de-th%C3%A9%C3%A2tre#book">Réservations</a></span>
+                                        <span class="date-date">jeudi 10 nov. à 8:30pm</span>, <span class="date-lieu">The Cockpit Theatre</span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/Fzw7ssbgBgP2">Accès</a> - <a class="reservation" href="http://tickets.thecockpit.org.uk/Sales/Shows/Voila-2016/SPECTATEURS-un-accident-de-th%C3%A9%C3%A2tre#book">Réservations</a></span>
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-3">
@@ -358,7 +358,7 @@
                                     <p class="date">
                                         <span class="date-lieu">LONDON</span> - <span class="date-piece"> <a href="#spectateurs">SPECTATEUR(S)</a>, un accident de théâtre</span>
                                         <br>
-                                        <span class="date-date">vendredi 11 nov. à 7:00pm</span>, <span class="date-lieu">The Cockpit Theatre</span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/Fzw7ssbgBgP2">map</a> - <a class="reservation" href="http://tickets.thecockpit.org.uk/Sales/Shows/Voila-2016/SPECTATEURS-un-accident-de-th%C3%A9%C3%A2tre#book">Réservations</a></span>
+                                        <span class="date-date">vendredi 11 nov. à 7:00pm</span>, <span class="date-lieu">The Cockpit Theatre</span> <span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/Fzw7ssbgBgP2">Accès</a> - <a class="reservation" href="http://tickets.thecockpit.org.uk/Sales/Shows/Voila-2016/SPECTATEURS-un-accident-de-th%C3%A9%C3%A2tre#book">Réservations</a></span>
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-3">
@@ -403,15 +403,15 @@
                         <br>
                         <h3>Équipe de création</h3>
                         <p class="equip-crea">
-                            <i>Écriture, mise en scène &amp; costumes /</i> Alice Tabart
+                            <span class="label-equipe-crea">Écriture, mise en scène &amp; costumes /</span> Alice Tabart
                             <br>
-                            <i>Interprétation /</i> Simon Giesbert, Coline Lubin, Olivier Marchepoil ou Lucas Lemauff &amp; Elsa Sanchez
+                            <span class="label-equipe-crea">Interprétation /</span> Simon Giesbert, Coline Lubin, Olivier Marchepoil ou Lucas Lemauff &amp; Elsa Sanchez
                             <br>
-                            <i>Chorégraphies /</i> Joël Sitbon &amp; Elsa Sanchez
+                            <span class="label-equipe-crea">Chorégraphies /</span> Joël Sitbon &amp; Elsa Sanchez
                             <br>
-                            <i>Création musicale /</i> Simon Giesbert
+                            <span class="label-equipe-crea">Création musicale /</span> Simon Giesbert
                             <br>
-                            <i>Création lumière /</i> Damien Peray &amp; Serena Andreasi
+                            <span class="label-equipe-crea">Création lumière /</span> Damien Peray &amp; Serena Andreasi
                             <br>
                         </p>
                         <h3>Gallerie</h3>
@@ -460,7 +460,7 @@
                     <div class="creations satyre" id="satyre">
                         <h2>Le Satyre</h2>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src='http://www.mativi-toulouse.fr/mativi-embed.php?file=http://mativi.vod.amp-i.net/i/toulouse/2430-512dcb183881b_,270p,360p,480p,540p,720p,.mp4.csmil/master.m3u8&thumb=http://www.mativi-toulouse.fr/medias/images/midi-pyrenees/thumbs/2430-512dcb183881b.jpg'></iframe>
+                            <iframe class="embed-responsive-item" src='http://mativi.vod.amp-i.net/i/toulouse/2430-512dcb183881b_,270p,360p,480p,540p,720p,.mp4.csmil/master.m3u8&thumb=http://www.mativi-toulouse.fr/medias/images/midi-pyrenees/thumbs/2430-512dcb183881b.jpg'></iframe>
                         </div>
                         <p>Le Satyre est un poème, ludique et épique, tiré de La Légende des Siècles de Victor Hugo.
                             <br> Il nous entraîne, aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe. Ombres et lumières, mots et jeux, musiques et danses, maniés avec habileté par deux comédiens, nous plongent dans une heure quinze de spectacle où le rire sert une réflexion très contemporaine sur le progrès, la place des puissants et la folle course de l'humanité.</p>
