--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         }
     })();
     </script>
-
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -187,7 +186,6 @@
                                                     <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
                                                     </var>
                                                 </span>
-
                                 </div>
                             </div>
                         </li>
@@ -218,7 +216,6 @@
                                                     <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
                                                     </var>
                                                 </span>
-
                                 </div>
                             </div>
                         </li>
@@ -249,7 +246,6 @@
                                                     <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
                                                     </var>
                                                 </span>
-
                                 </div>
                             </div>
                         </li>
@@ -280,7 +276,6 @@
                                                     <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
                                                     </var>
                                                 </span>
-
                                 </div>
                             </div>
                         </li>
@@ -311,7 +306,6 @@
                                                     <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
                                                     </var>
                                                 </span>
-
                                 </div>
                             </div>
                         </li>
@@ -344,7 +338,6 @@
                                                     <var class="atc_organizer_email">reception@thecockpit.org.uk</var>
                                                     </var>
                                                 </span>
-
                                 </div>
                             </div>
                         </li>
@@ -375,7 +368,6 @@
                                                     <var class="atc_organizer_email">reception@thecockpit.org.uk</var>
                                                     </var>
                                                 </span>
-
                                 </div>
                             </div>
                         </li>
@@ -422,10 +414,99 @@
                             <br> Plus de details sur l’équipe et la production dans:
                             <br>
                             <ul class="production">
-                                <li>le <a href="media/spectateurs/pdf/dossier-spectateur.pdf">Dossier de communication</a></li>
-                                <li>la <a href="">Revue de presse</a></li>
+                                <li>le <a href="creations/SPECTATEURS/media/PDF/dossier-presse-spectateurs.pdf">Dossier de communication</a>
+                                    <!-- <li>le <a data-toggle="modal" href="#modal-dossier-presse-spectateur">Dossier de communication</a>-->
+                                </li>
+                                <li>la <a data-toggle="modal" href="#revue-presse-spectateurs-modal-lg">Revue de presse</a></li>
                                 <li>la <a data-toggle="modal" href="#modal-dates-spectateur">liste des dates passées</a></li>
                             </ul>
+                            <div id="revue-presse-spectateurs-modal-lg" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="RevueDePresse" aria-hidden="false">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <h4 class="modal-title">Revue de presse - Spectateur(s)</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                                                <!-- Wrapper for slides -->
+                                                <div class="carousel-inner">
+                                                    <div class="item active">
+                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/LeBrigadier.jpg" alt="Le Brigadier">
+                                                        <div class="carousel-caption">
+                                                            Le Brigadier, revue des Arts de la scène
+                                                        </div>
+                                                    </div>
+                                                    <div class="item">
+                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/Journal-de-Millau-7mars.jpg" alt="...">
+                                                        <div class="carousel-caption">
+                                                            Journal de Millau
+                                                        </div>
+                                                    </div>
+                                                    <div class="item">
+                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/LaGazette-28mars.jpg" alt="...">
+                                                        <div class="carousel-caption">
+                                                            La Gazette du Comminge
+                                                        </div>
+                                                    </div>
+                                                    <div class="item">
+                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/29-avril-La-Depeche-Villasavary.jpg" alt="...">
+                                                        <div class="carousel-caption">
+                                                            La Dépêche / Aude
+                                                        </div>
+                                                    </div>
+                                                    <div class="item">
+                                                        <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/LIndependant-10 avril.jpg" alt="...">
+                                                        <div class="carousel-caption">
+                                                            L'Indépendant
+                                                        </div>
+                                                    </div>
+                                                    <div class="item">
+                                                     <div class="embed-responsive embed-responsive-16by9">
+                                                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3OvblKSkcpc?html5=1"></iframe>
+                                                         </div>
+                                                        <div class="carousel-caption">
+                                                            Interview sur Campus
+                                                        </div>
+                                                    </div>
+                                                    <div class="item">
+                                                     <div class="embed-responsive embed-responsive-16by9">
+                                                          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v9Wc4HJnqTo?html5=1"></iframe>
+                                                          </div>
+                                                        <div class="carousel-caption">
+                                                            Chronique sur Canal Sud
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- Controls -->
+                                                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                                </a>
+                                                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Modal dossier de presse -->
+                            <!--<div id="modal-dossier-presse-spectateur" class="modal fade" role="dialog">
+                                        <div class="modal-dialog">-->
+                            <!-- Modal content-->
+                            <!--<div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                    <h4 class="modal-title">Dossier de presse - Spectateur(s)</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <object data="creations/SPECTATEURS/media/PDF/dossier-presse-spectateurs.pdf" type="application/pdf" height=100%>
+                                                    alt : <a href="creations/SPECTATEURS/media/PDF/dossier-presse-spectateurs.pdf">dossier-spectateur.pdf</a>
+                                                    </object>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>-->
                             <!-- Modal dates passees -->
                             <div id="modal-dates-spectateur" class="modal fade" role="dialog">
                                 <div class="modal-dialog">
@@ -460,7 +541,7 @@
                     <div class="creations satyre" id="satyre">
                         <h2>Le Satyre</h2>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src='http://mativi.vod.amp-i.net/i/toulouse/2430-512dcb183881b_,270p,360p,480p,540p,720p,.mp4.csmil/master.m3u8&thumb=http://www.mativi-toulouse.fr/medias/images/midi-pyrenees/thumbs/2430-512dcb183881b.jpg'></iframe>
+                            <iframe class="embed-responsive-item" src='http://www.mativi-toulouse.fr/mativi-embed.php?file=http://mativi.vod.amp-i.net/i/toulouse/2430-512dcb183881b_,270p,360p,480p,540p,720p,.mp4.csmil/master.m3u8&thumb=http://www.mativi-toulouse.fr/medias/images/midi-pyrenees/thumbs/2430-512dcb183881b.jpg'></iframe>
                         </div>
                         <p>Le Satyre est un poème, ludique et épique, tiré de La Légende des Siècles de Victor Hugo.
                             <br> Il nous entraîne, aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe. Ombres et lumières, mots et jeux, musiques et danses, maniés avec habileté par deux comédiens, nous plongent dans une heure quinze de spectacle où le rire sert une réflexion très contemporaine sur le progrès, la place des puissants et la folle course de l'humanité.</p>
