--- a/index.html
+++ b/index.html
@@ -518,9 +518,9 @@
                                         </div>
                                         <div class="modal-body">
                                             <ul>
-                                                <li>Mardi 20 janvier 2015 à 20h et mercredi 21 janvier à 12h45 /// Fabrique Arts, Culture, Toulouse (31)</li>
-                                                <li>Samedi 21 février à 20h30 /// Le Préau /// La Salvetat Saint Gilles (31)</li>
-                                                <li>Samedi 7 mars à 20h30 /// Salle des Fêtes /// Lapanouse de Séverac (12)</li>
+                                                <li>Mardi 20 janvier 2015 à 20h et mercredi 21 janvier à 12h45 <br> Fabrique Arts, Culture, Toulouse (31)</li>
+                                                <li>Samedi 21 février à 20h30 <br> Le Préau /// La Salvetat Saint Gilles (31)</li>
+                                                <li>Samedi 7 mars à 20h30 <br>  Salle des Fêtes /// Lapanouse de Séverac (12)</li>
                                                 <li>Samedi 28 mars à 21h /// Salle du Foyer de la Mairie /// Clarac (31)</li>
                                                 <li>Samed 4 avril à 20h30 /// Les Halles /// Villasavary (11)</li>
                                                 <li>Samedi 6 juin à 21h /// Le Kiosque /// Villefranche de Rouergue (12)</li>
@@ -541,7 +541,7 @@
                     <div class="creations satyre" id="satyre">
                         <h2>Le Satyre</h2>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src='http://www.mativi-toulouse.fr/mativi-embed.php?file=http://mativi.vod.amp-i.net/i/toulouse/2430-512dcb183881b_,270p,360p,480p,540p,720p,.mp4.csmil/master.m3u8&thumb=http://www.mativi-toulouse.fr/medias/images/midi-pyrenees/thumbs/2430-512dcb183881b.jpg'></iframe>
+                            <iframe class="embed-responsive-item" src="creations/Satyre/media/videos/satyre-my-tivi.mp4" ></iframe>
                         </div>
                         <p>Le Satyre est un poème, ludique et épique, tiré de La Légende des Siècles de Victor Hugo.
                             <br> Il nous entraîne, aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe. Ombres et lumières, mots et jeux, musiques et danses, maniés avec habileté par deux comédiens, nous plongent dans une heure quinze de spectacle où le rire sert une réflexion très contemporaine sur le progrès, la place des puissants et la folle course de l'humanité.</p>
