--- a/index.html
+++ b/index.html
@@ -541,8 +541,11 @@
                     <div class="creations satyre" id="satyre">
                         <h2>Le Satyre</h2>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="creations/Satyre/media/videos/satyre-my-tivi.mp4" ></iframe>
-                        </div>
+                            <video preload="metadata" controls>
+                              <source class="embed-responsive-item" src="creations/Satyre/media/videos/satyre-my-tivi.mp4" type="video/mp4">
+                                  Your browser does not support the video tag.
+                              </video>
+                          </div>
                         <p>Le Satyre est un poème, ludique et épique, tiré de La Légende des Siècles de Victor Hugo.
                             <br> Il nous entraîne, aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe. Ombres et lumières, mots et jeux, musiques et danses, maniés avec habileté par deux comédiens, nous plongent dans une heure quinze de spectacle où le rire sert une réflexion très contemporaine sur le progrès, la place des puissants et la folle course de l'humanité.</p>
                         <h3>Équipe de création</h3>
