--- a/index.html
+++ b/index.html
@@ -407,6 +407,25 @@
                             <br>
                         </p>
                         <h3>Gallerie</h3>
+                            <div class="row">
+                                <a href="http://41.media.tumblr.com/f37ac708134914c471073e4c0b47328d/tumblr_mrn3dc10Wa1r1thfzo8_1280.jpg" data-toggle="lightbox" data-gallery="hiddenimages" data-title="People walking down stairs" class="col-sm-4">
+                                    <img src="//41.media.tumblr.com/f37ac708134914c471073e4c0b47328d/tumblr_mrn3dc10Wa1r1thfzo8_1280.jpg" class="img-responsive">
+                                </a>
+                                <a href="http://41.media.tumblr.com/838b44224e39c30cd43490deb11b919d/tumblr_mrn3dc10Wa1r1thfzo1_1280.jpg" data-toggle="lightbox" data-gallery="hiddenimages" data-title="Man getting wet" class="col-sm-4">
+                                    <img src="//41.media.tumblr.com/838b44224e39c30cd43490deb11b919d/tumblr_mrn3dc10Wa1r1thfzo1_1280.jpg" class="img-responsive">
+                                </a>
+                                <a href="http://41.media.tumblr.com/e06a3513b0b36843f54bee99aeac689a/tumblr_mrn3dc10Wa1r1thfzo2_1280.jpg" data-toggle="lightbox" data-gallery="hiddenimages" data-title="Someone lost their dress" class="col-sm-4">
+                                    <img src="//41.media.tumblr.com/e06a3513b0b36843f54bee99aeac689a/tumblr_mrn3dc10Wa1r1thfzo2_1280.jpg" class="img-responsive">
+                                </a>
+                                <!-- elements not showing, use data-remote -->
+                                <div data-toggle="lightbox" data-gallery="hiddenimages" data-remote="http://41.media.tumblr.com/9d3e6a9c89a856a2ad0be3ab4ca598b2/tumblr_mrn3dc10Wa1r1thfzo4_1280.jpg" data-title="Hidden item 1"></div>
+                                <div data-toggle="lightbox" data-gallery="hiddenimages" data-remote="//www.youtube.com/embed/b0jqPvpn3sY" data-title="Hidden item 2"></div>
+                                <div data-toggle="lightbox" data-gallery="hiddenimages" data-remote="http://41.media.tumblr.com/9d3e6a9c89a856a2ad0be3ab4ca598b2/tumblr_mrn3dc10Wa1r1thfzo4_1280.jpg" data-title="Hidden item 3"></div>
+                                <div data-toggle="lightbox" data-gallery="hiddenimages" data-remote="http://40.media.tumblr.com/f9fcf4cae3468d96a324cae301c00998/tumblr_mrn3dc10Wa1r1thfzo3_1280.jpg" data-title="Hidden item 4"></div>
+                                <div data-toggle="lightbox" data-gallery="hiddenimages" data-remote="http://36.media.tumblr.com/de356cd6570d7c26e73979467f296f67/tumblr_mrn3dc10Wa1r1thfzo6_1280.jpg" data-title="Hidden item 5"></div>
+                            </div>
+
+
                         <h3>Production</h3>
                         <p class="production">
                             Une production de l’Association Mesdames A, avec le soutien de la Commission Européenne (PEJA 2013), et du Conseil Général de la Haute-Garonne (aide à la création),en partenariat avec le CIAM, Mix’art Myrys et l’association ACT.
@@ -541,24 +560,23 @@
                     <div class="creations satyre" id="satyre">
                         <h2>Le Satyre</h2>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <video preload="metadata" controls>
-                              <source class="embed-responsive-item" src="creations/Satyre/media/videos/satyre-my-tivi.mp4" type="video/mp4">
-                                  Your browser does not support the video tag.
-                              </video>
+                               <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/182463716"></iframe>
                           </div>
                         <p>Le Satyre est un poème, ludique et épique, tiré de La Légende des Siècles de Victor Hugo.
-                            <br> Il nous entraîne, aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe. Ombres et lumières, mots et jeux, musiques et danses, maniés avec habileté par deux comédiens, nous plongent dans une heure quinze de spectacle où le rire sert une réflexion très contemporaine sur le progrès, la place des puissants et la folle course de l'humanité.</p>
+                            <br> Il nous entraîne, aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe.<br>
+                            Ombres et lumières, mots et jeux, musiques et danses, maniés avec habileté par deux comédiens, nous plongent dans une heure quinze de spectacle où le rire sert une réflexion très contemporaine sur le progrès, la place des puissants et la folle course de l'humanité.</p>
+
                         <h3>Équipe de création</h3>
                         <p class="equip-crea">
-                            <i>Mise en scène &amp; costumes /</i> Alice Tabart
+                            <span class="label-equipe-crea">Mise en scène &amp; costumes /</span> Alice Tabart
                             <br>
-                            <i>Interprétation /</i> Coline Lubin &amp; Simon Giesbert
+                            <span class="label-equipe-crea">Interprétation /</span> Coline Lubin &amp; Simon Giesbert
                             <br>
-                            <i>Création musicale /</i> Simon Giesbert
+                            <span class="label-equipe-crea">Création musicale /</span> Simon Giesbert
                             <br>
-                            <i>Stagiaire /</i> Charline Daligaud
+                            <span class="label-equipe-crea">Stagiaire /</span> Charline Daligaud
                             <br>
-                            <i>Création affiche /</i> Cécile Vallade
+                            <span class="label-equipe-crea">Création affiche /</span> Cécile Vallade
                             <br>
                         </p>
                         <h3>Production</h3>
